--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.15",
+    "cypress": "^12.17.4",
     "postcss": "^8.4.27",
     "scss": "^0.2.4",
     "tailwindcss": "^3.3.3"
