--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@tanstack/react-query": "^4.32.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -23,12 +24,15 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:storybook/recommended"
     ]
   },
   "browserslist": {
@@ -44,10 +48,24 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.3.1",
+    "@storybook/addon-interactions": "^7.3.1",
+    "@storybook/addon-links": "^7.3.1",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/blocks": "^7.3.1",
+    "@storybook/preset-create-react-app": "^7.3.1",
+    "@storybook/react": "^7.3.1",
+    "@storybook/react-webpack5": "^7.3.1",
+    "@storybook/testing-library": "^0.2.0",
     "autoprefixer": "^10.4.15",
+    "babel-plugin-named-exports-order": "^0.0.2",
     "cypress": "^12.17.4",
+    "eslint-plugin-storybook": "^0.6.13",
     "postcss": "^8.4.27",
+    "prop-types": "^15.8.1",
     "scss": "^0.2.4",
-    "tailwindcss": "^3.3.3"
+    "storybook": "^7.3.1",
+    "tailwindcss": "^3.3.3",
+    "webpack": "^5.88.2"
   }
 }
