--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@storybook/addon-interactions": "^7.3.1",
     "@storybook/addon-links": "^7.3.1",
     "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/addon-styling": "^1.3.6",
     "@storybook/blocks": "^7.3.1",
     "@storybook/preset-create-react-app": "^7.3.1",
     "@storybook/react": "^7.3.1",
@@ -62,7 +63,7 @@
     "babel-plugin-named-exports-order": "^0.0.2",
     "cypress": "^12.17.4",
     "eslint-plugin-storybook": "^0.6.13",
-    "postcss": "^8.4.27",
+    "postcss": "^8.4.28",
     "prop-types": "^15.8.1",
     "scss": "^0.2.4",
     "storybook": "^7.3.1",
